Corrected spacing format in main.js. Remove unneeded fs_image attribute

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -104,7 +104,6 @@ button {
 }
 
 .modal_content img{
-    position: absolute;
     margin: auto;
     opacity: 1.0;
 }
